--- a/css/styles.css
+++ b/css/styles.css
@@ -40,6 +40,9 @@ color: #404bbf;}
 .hero-image{
     background-color: #2e2f42;
 }
+.contact-info{
+    font-style: normal;
+}
 
 .hero-text{
     font-size: 56px;
