--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,7 @@ color: #4d5ae5;
 }
 
 .logo-text{
+    
     color: #2e2f42;
 
 }
@@ -36,6 +37,19 @@ color: #4d5ae5;
 .page-names:focus{
 color: #404bbf;}
 
+.contact-names {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #434455;
+}
+.contact-names:hover{
+    color: #404bbf;
+}
+.contact-names:focus{
+    color: #404bbf;
+}
 
 .hero-image{
     background-color: #2e2f42;
