--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@ body{
 
 
 .logo-font{
-font-family: "Raleway";
+font-family: "Raleway", sans-serif;
 font-weight: 700;
 font-size: 18px;
 line-height: 1.17;
