--- a/css/styles.css
+++ b/css/styles.css
@@ -3,11 +3,14 @@ body{
     background-color: #FFFFFF;
     color: #434455;
     
+    
 }
 
 
 .logo-font{
+
 font-family: "Raleway", sans-serif;
+
 font-weight: 700;
 font-size: 18px;
 line-height: 1.17;
@@ -19,6 +22,7 @@ color: #4d5ae5;
 
 .logo-text{
     font-family: "Raleway",sans-serif;
+    font-weight: 700;
     color: #2e2f42;
 
 }
