--- a/css/styles.css
+++ b/css/styles.css
@@ -55,14 +55,14 @@ color: #404bbf;}
     color: #404bbf;
 }
 
-.section-one{
+.sec_class1{
     background-color: #2e2f42;
 }
 .contact-info{
     font-style: normal;
 }
 
-.header{
+.header-class{
     font-size: 56px;
     line-height: 1.07;
     text-align: center;
@@ -71,7 +71,7 @@ color: #404bbf;}
 
 }
 
-.button{
+.button-class{
     background-color: #4D5AE5;
     font-family: "Roboto",sans-serif;
     font-weight: 500;
