--- a/css/styles.css
+++ b/css/styles.css
@@ -62,7 +62,7 @@ color: #404bbf;}
     font-style: normal;
 }
 
-h1{
+.hero-text{
     font-size: 56px;
     line-height: 1.07;
     text-align: center;
@@ -71,7 +71,7 @@ h1{
 
 }
 
-button{
+.order-button{
     background-color: #4D5AE5;
     font-family: "Roboto",sans-serif;
     font-weight: 500;
@@ -108,7 +108,7 @@ button{
 
 
 
-h2{
+.medium-header{
     font-size: 36px;
     color: #2e2f42;
     text-transform: capitalize;
@@ -122,7 +122,7 @@ h2{
 
 }
 
-h3{
+.small-header{
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
@@ -130,7 +130,7 @@ h3{
     color: #2e2f42;
 }
 
-p{
+.small-text{
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
