--- a/css/styles.css
+++ b/css/styles.css
@@ -55,14 +55,14 @@ color: #404bbf;}
     color: #404bbf;
 }
 
-.section_bir{
+.hero-section{
     background-color: #2e2f42;
 }
 .contact-info{
     font-style: normal;
 }
 
-.hero-text{
+.hero-header{
     font-size: 56px;
     line-height: 1.07;
     text-align: center;
